# crossword-generator

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  config.easy.yaml  config.example.yaml  config.hard.yaml  generator-command.sh  pyproject.toml
dictionaries/: CoffeeAndFunGoogleProfanityWords.txt  HggCuratedCrosswordList-Removed.txt  HggCuratedCrosswordList.txt  HggScoredCrosswordList-Removed.txt  HggScoredCrosswordList.txt  Wordplete-PrevalentCulled-8-9-length-Removed.txt  Wordplete-PrevalentCulled-8-9-length.txt  XwiJeffChenList-FamilyFriendly.txt  XwiJeffChenList-NotFamilyFriendly.txt  XwiJeffChenList-VariantsToRemove.txt  XwiJeffChenList.txt  hgg-easy-flat-55.txt  hgg-easy-prevalent-flat-55.txt  hgg-hard-flat-55.txt
docs/: clue-quality.md  construction-design-principles.md  fill-quality-aspirational.md  fill-quality.md  ipuz-extensions.md  phase-1-batch-inputs.md  puzzle-file-formats.md  roadmap.md
scripts/: benchmark_fill_quality.py  build_scored_list.py  classify_words.py  compare_clue_providers.py  extract_varcon_variants.py  filter_family_friendly.py  remove_flagged_words.py  setup_ollama.sh  view_clue_comparison.py
tests/: conftest.py  test_claude_provider.py  test_cli_batch.py  test_clue_grader.py  test_clue_grading_step.py  test_clue_step.py  test_config.py  test_crossing_scorer.py  test_csp_filler.py  test_csp_seed_entries.py  test_data_store.py  test_dictionary.py  test_dictionary_prep.py  test_evaluation.py  test_fill_grader.py  test_fill_selection.py  test_fill_step.py  test_fill_with_grading_step.py  test_go_crossword_filler.py  (+15 more)
(+71 files in other folders)
