[project]
name = "crossword-generator"
version = "0.1.0"
description = "Automated crossword puzzle generation pipeline for mini and midi puzzles"
requires-python = ">=3.11"
dependencies = [
    "puzpy>=0.2",
    "ipuz>=1.0",
    "crossword>=0.1",
    "ollama>=0.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
crossword-generator = "crossword_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crossword_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
